5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1590_2895.log
== TEST (2019-03-20 15:33:15) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?")
-- ERROR:
File "XXXX", line 4
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:33:34) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
-- ERROR:
File "XXXX", line 4
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:33:44) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
-- ERROR:
File "XXXX", line 4
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:35:12) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (quant + var + fre)
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:36:56) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = 100
fre = 45
total = (quant * var) + fre
print(total)
-- OUTPUT:
1245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:37:05) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = 100
fre = 45
total = (quant * var) + fre
print(total)
-- EXECUTION TIME:
0.175903
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1245.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1045.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24645.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:37:40) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (quant + var + fre)
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:37:55) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (quant + var + fre)
print(total)
-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:38:43) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
total = quant * (var + fre)
print(total)
-- OUTPUT:
1476.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:39:05) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
total = quant * (var + fre)
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:39:56) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (var + fre) * quant 
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:41:10) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitário de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (var + fre) * quant 
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:41:43) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitario de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (var + fre) * quant 
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:42:14) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitario de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (var + fre) * quant 
print(total)
-- OUTPUT:
1476.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:42:33) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitario de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (var + fre) * quant 
print(total)
-- EXECUTION TIME:
0.202535
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1476.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1620.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
318816.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:42:37) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitario de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (var + fre) * quant 
print(total)
-- OUTPUT:
1476.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:24) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitario de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (var * quant) +fre
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:43:55) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("O valor unitario de cada jogo?"))
fre = float(input("o valor do frete?"))
total = (var * quant) +fre
print(total)
-- EXECUTION TIME:
0.160344
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
